--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.12.0",
     "web-push": "^3.6.7"
   },
