--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "author": "Gabriel Christino",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.12.0",
     "web-push": "^3.6.7"
