--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "db:seed": "node seed.js",
+    "migrate": "node migrate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
